Hoja de estilos sin minimizar

--- a/codekit-config.json
+++ b/codekit-config.json
@@ -321,7 +321,7 @@
   },
   "projectAttributes" : {
     "bourbonEnabled" : 0,
-    "displayValue" : "HandBook",
+    "displayValue" : "handbook",
     "displayValueWasSetByUser" : 0,
     "compassEnabled" : 0
   }
